--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,8 @@ spring.h2.console.settings.web-allow-others=true
 ############ Setting log level #############
 logging.level.root=INFO
 logging.level.web=DEBUG
+
+###### Swagger Config #########
+app.swagger.title=SpringBoot APIs
+app.swagger.version=1.1.0
+app.swagger.description=Lab Spring Boot API Documentation
