Added : Spring Actuator, Logging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=7070
 
-############### H2 DB Config ####################
+### H2 DB Config ###
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -21,11 +21,46 @@ spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=true
 
 
-############ Setting log level #############
+### Setting log level ###
+spring.output.ansi.enabled=ALWAYS
 logging.level.root=INFO
 logging.level.web=DEBUG
+logging.level.org.apache.tomcat=DEBUG
+logging.level.org.apache.catalina=DEBUG
+logging.level.org.springframework.web=ERROR
+logging.level.org.hibernate=ERROR
 
-###### Swagger Config #########
+### Setting log level color pattern for Console ###
+logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss.SSS} %magenta([%thread]) %highlight(%-5level) %logger.%M - %msg%n
+
+### Setting of file ###
+logging.file.name=employee-api.log
+
+### Logging pattern and Specify only Application Package in employee-api.log file ###
+logging.level.com.training.lab.controller=INFO
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+
+### Swagger Config ###
 app.swagger.title=SpringBoot APIs
 app.swagger.version=1.1.1
 app.swagger.description=Lab Spring Boot API Documentation
+
+### Devtool Config ###
+spring.devtools.add-properties=false
+
+### Actuator Configuration
+management.endpoints.web.base-path=/monitor
+management.endpoints.web.exposure.include=*
+#management.endpoint.health.group.custom.include=diskSpace,ping
+#management.endpoint.health.group.custom.show-components=always
+#management.endpoint.health.group.custom.show-details=always
+
+management.info.env.enabled=true
+info.app.name=Employee Spring Boot Application
+info.app.description=Employee Spring Boot Application created during Lab
+info.app.version=2.0.0
+
+info.release.name=Release Note
+info.release.description=Beta Release
+info.release.version=2.0.0-Beta
