SOme more notes added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # accessing the h2 console
 spring.h2.console.enabled=true
 
-# adding path relative to the api server
+# adding path relative to the H2 server
 spring.h2.console.path=/h2-console
 # disabling tracing output
 spring.h2.console.settings.trace=false
@@ -37,9 +37,7 @@ logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss.SSS} %magenta([%thread]) %highlig
 logging.file.name=employee-api.log
 
 ### Logging pattern and Specify only Application Package in employee-api.log file ###
-logging.level.com.training.lab.controller=INFO
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
-
 
 ### Swagger Config ###
 app.swagger.title=SpringBoot APIs
@@ -52,9 +50,9 @@ spring.devtools.add-properties=false
 ### Actuator Configuration
 management.endpoints.web.base-path=/monitor
 management.endpoints.web.exposure.include=*
-#management.endpoint.health.group.custom.include=diskSpace,ping
-#management.endpoint.health.group.custom.show-components=always
-#management.endpoint.health.group.custom.show-details=always
+management.endpoint.health.group.custom.include=diskSpace,ping
+management.endpoint.health.group.custom.show-components=always
+management.endpoint.health.group.custom.show-details=always
 
 management.info.env.enabled=true
 info.app.name=Employee Spring Boot Application
