Code Added for Spring Batch Processing Example

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -61,4 +61,8 @@ info.app.version=2.0.0
 
 info.release.name=Release Note
 info.release.description=Beta Release
-info.release.version=2.0.0-Beta
+info.release.Developer=Subhasis R
+info.release.Reviewer=Kamesh S
+
+app.batch.file.employee-data=classpath:employee.csv
+spring.batch.job.enabled=false
