Sample : Code Added for Spring Batch Processing with Sample Data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,7 +47,7 @@ app.swagger.description=Lab Spring Boot API Documentation
 ### Devtool Config ###
 spring.devtools.add-properties=false
 
-### Actuator Configuration
+### Actuator Configuration ###
 management.endpoints.web.base-path=/monitor
 management.endpoints.web.exposure.include=*
 management.endpoint.health.group.custom.include=diskSpace,ping
@@ -64,5 +64,7 @@ info.release.description=Beta Release
 info.release.Developer=Subhasis R
 info.release.Reviewer=Kamesh S
 
+## #Spring Batch related Config ###
 app.batch.file.employee-data=classpath:employee.csv
 spring.batch.job.enabled=false
+app.batch.file.nifty-data=classpath:stock-data/BAJAJFINSV.csv
